---
source: src/codegen/tests/code_gen_tests.rs
expression: msg
---
error: Some initial values were not generated
  ┌─ <internal>:1:1
  │
1 │ PROGRAM prg
  │ ^ Some initial values were not generated


